Project

General

Profile

Actions

Bug #10803

closed

xnbo: NULL pointer errors

Added by Toomas Soome about 4 years ago. Updated about 4 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
driver - device drivers
Start date:
2019-04-14
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:

Description

NULL pointer errors:

    ../../common/xen/io/xnbo.c: In function 'xnbo_to_mac':
    ../../common/xen/io/xnbo.c:102:33: error: comparison between pointer and integer [-Werror]
          MAC_DROP_ON_NO_DESC, NULL) != NULL) {
                                     ^~
    cc1: all warnings being treated as errors

Actions #1

Updated by Electric Monk about 4 years ago

  • Status changed from In Progress to Closed
  • % Done changed from 90 to 100

git commit aabaa37a39655f3a4bc4cb0c5d7d9ad5927c3323

commit  aabaa37a39655f3a4bc4cb0c5d7d9ad5927c3323
Author: Toomas Soome <tsoome@me.com>
Date:   2019-04-22T05:12:56.000Z

    10803 xnbo: NULL pointer errors
    Reviewed by: John Levon <john.levon@joyent.com>
    Reviewed by: Robert Mustacchi <rm@joyent.com>
    Reviewed by: Gergő Doma <domag02@gmail.com>
    Approved by: Richard Lowe <richlowe@richlowe.net>

Actions

Also available in: Atom PDF